Ensure delegation button visible on mobile

--- a/client/styles/pages/members.scss
+++ b/client/styles/pages/members.scss
@@ -28,6 +28,11 @@
             font-size: 18px;
         }
     }
+    @include sm-max {
+        .members-item-info {
+            max-width: 100px;   
+        }
+    }
     .spinner-wrap {
         width: 100%;
         display: flex;
